style.css
html {
  background-attachment: fixed;
  background-image: url('/bg.jpg');
  background-position: 50%;
  background-size: cover;

  font-family: Georgia, serif;
  line-height: 1.4;
  margin: 0;
  padding: 0;
}

body {
  background: rgba(0, 0, 0, .89);
  color: whitesmoke;
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
}

main {
  padding: 1em;
  margin: 0 auto;
  max-width: 37em;
}

main > * + * {
  margin-top: 1em;
}

article.ck-focused {
  --ck-focus-ring: 1px solid;
  background: black;
}

h1, h2, h3, h4, a {
  color: white;
}

h1 {
  font-variant: small-caps;
  margin-top: 0;
  text-align: right;
}

hr {
  color: inherit;
  margin: 2em 0;
}

form {
  display: none;
  font-size: .8em;
}
form > * + * {
  margin-top: 1em;
}

fieldset {
  border: none;
  display: block;
  padding: 0;
}
fieldset > * {
  display: inline-block;
}
fieldset > * + * {
  margin-left: .5em;
}

button, input, [role=button] {
  background: black;
  border: 1px solid;
  border-radius: 2px;
  color: inherit;
  font-size: inherit;
  font-variant: small-caps;
  padding: 2px .5em;
  text-decoration: none;
  user-select: none;
}
button:hover, input:hover, [role=button]:hover {
  border-color: whitesmoke;
  background: whitesmoke;
  color: black;
}
button[name=trash]:hover {
  background: red;
  border: 1px solid red;
  color: white;
}

input {
  max-width: 7em;
}
input[type=text] {
  font-variant: initial;
}

